# veecle-os

./: .codecov.yml  .editorconfig  .editorconfig-checker.json  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .vale.ini  .yamllint  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FreeRTOSConfig.h  Justfile  README.md  Reader-Writer.md  cargo-in-all-workspaces  clippy.toml  deny.toml  flake.nix  rust-toolchain-nightly.toml  rust-toolchain.toml  shell.nix  taplo.toml  tombi.toml
capicxx-someip-sys/: Cargo.toml  README.md  build.rs
capicxx-someip-sys/src/: lib.rs
readme-example/: Cargo.toml
readme-example/src/: lib.rs
someip-test-service/: Cargo.toml  README.md
someip-test-service-macro/: Cargo.toml  README.md
someip-test-service-macro/src/: lib.rs
someip-test-service-macro/tests/: smoke_test.rs
someip-test-service-sys/: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs  justfile
someip-test-service-sys/cpp/: .clang-format  interface.hpp
someip-test-service-sys/cpp/service/: CMakeLists.txt
someip-test-service-sys/cpp/service_stub/: CMakeLists.txt  lib.cpp
someip-test-service-sys/fidl/: TestService.fdepl  TestService.fidl
someip-test-service-sys/src/: lib.rs
someip-test-service-sys/tests/: smoke_test.rs
someip-test-service-sys/tests/config/: common_api.ini  vsomeip.json
someip-test-service-tests/: Cargo.toml  README.md
someip-test-service-tests/tests/: roundtrip.rs
someip-test-service/src/: endpoint.rs  ipc.rs  lib.rs  main.rs  subprocess.rs  test_service.rs
someip-test-service/src/config/: common_api.rs  mod.rs  test_service.rs  vsomeip.rs
someip-test-service/tests/: smoke_test.rs
veecle-ipc/: Cargo.toml
veecle-ipc-protocol/: Cargo.toml
veecle-ipc-protocol/src/: jsonl.rs  lib.rs
veecle-ipc/src/: connector.rs  lib.rs  send_policy.rs  telemetry.rs
veecle-ipc/tests/: send_policy.rs
veecle-net-utils/: Cargo.toml
veecle-net-utils/src/: address.rs  async_io.rs  blocking.rs  lib.rs
veecle-orchestrator/: Cargo.toml  README.md
veecle-orchestrator-cli/: Cargo.toml
veecle-orchestrator-cli/src/: lib.rs  main.rs
veecle-orchestrator-protocol/: Cargo.toml
veecle-orchestrator-protocol/src/: lib.rs
veecle-orchestrator/src/: api.rs  conductor.rs  distributor.rs  external.rs  eyre_tracing_error.rs  lib.rs  listener.rs  main.rs  telemetry.rs
veecle-os/: Cargo.toml  README.md
veecle-os-cli/: Cargo.toml  README.md
veecle-os-cli/src/: main.rs
veecle-os-data-support-can/: Cargo.toml  README.md
veecle-os-data-support-can-cli/: Cargo.toml  README.md
veecle-os-data-support-can-cli/src/: codegen.rs  lib.rs
veecle-os-data-support-can-codegen/: Cargo.toml  README.md
veecle-os-data-support-can-codegen/src/: dbc_ext.rs  lib.rs
veecle-os-data-support-can-codegen/tests/: generate.rs  j1939-roundtrip.rs
veecle-os-data-support-can-macros/: Cargo.toml  README.md
veecle-os-data-support-can-macros/src/: expand.rs  lib.rs
veecle-os-data-support-can/src/: bits.rs  error.rs  frame.rs  generate.rs  id.rs  lib.rs
veecle-os-data-support-can/tests/: j1939-roundtrip.rs  pub-mod.rs  serialization.rs  validation.rs
veecle-os-data-support-someip/: Cargo.toml  README.md
veecle-os-data-support-someip-macros/: Cargo.toml  README.md
veecle-os-data-support-someip-macros/src/: lib.rs  parse.rs  serialize.rs
veecle-os-data-support-someip/src/: array.rs  header.rs  length.rs  lib.rs  parse.rs  parse_impl.rs  serialize.rs  serialize_impl.rs  service_discovery.rs  string.rs
veecle-os-data-support-someip/tests/: move_between_actors.rs  serialization.rs
veecle-os-runtime/: Cargo.toml  README.md
veecle-os-runtime-macros/: Cargo.toml  README.md
veecle-os-runtime-macros/src/: actor.rs  lib.rs  storable.rs  store.rs
veecle-os-runtime-macros/test-crates/: README.md
veecle-os-runtime/src/: actor.rs  cons.rs  execute.rs  executor.rs  find.rs  heapfree_executor.rs  lib.rs  memory_pool.rs
veecle-os-runtime/tests/: exclusive_reader.rs  execute_macro.rs  memory_pool.rs  mpsc.rs  reader_writer.rs  same_datatype_storables.rs  sensor-actuator.rs  stress_test_execute_macro_actors.rs  stress_test_execute_macro_store.rs  stress_test_execute_macro_store_and_actors.rs  tokio-runtime-actor.rs  trybuild.rs
veecle-os-test/: Cargo.toml  README.md
veecle-os-test/src/: execute.rs  lib.rs
veecle-os/src/: lib.rs
veecle-osal-api/: Cargo.toml  README.md
veecle-osal-api/src/: error.rs  lib.rs  log.rs  thread.rs
veecle-osal-embassy/: Cargo.toml  README.md
veecle-osal-embassy/src/: lib.rs  log.rs  thread.rs  time.rs
veecle-osal-embassy/tests/: system_time_duration_since_earlier.rs  system_time_duration_since_epoch.rs  system_time_duration_since_epoch_unsynced.rs  tcp_accept_all_zero_ip_v4.rs  tcp_accept_all_zero_ip_v6.rs  tcp_accept_with_zero_port.rs  tcp_close_connection.rs  tcp_connect.rs  tcp_connect_refused.rs  tcp_new_invalid.rs  tcp_send_recv.rs  timer_interval.rs  timer_sleep.rs  timer_sleep_max.rs  timer_timeout_at.rs  timer_timeout_at_exceeded.rs  timer_until.rs  udp_bind_all_zero_address_v4.rs  udp_bind_all_zero_address_v6.rs  udp_bind_multiple_sockets.rs  udp_bind_specific_port.rs  udp_close_socket.rs  udp_local_addr_before_bind.rs  udp_max_datagram_size.rs  udp_multiple_binds.rs  udp_new_invalid.rs  udp_oversized_datagram.rs  udp_rebind_after_close.rs  udp_recv_without_bind.rs  udp_send_recv_v4.rs  udp_send_recv_v6.rs  udp_send_without_bind.rs  udp_zero_length_datagram.rs
veecle-osal-freertos/: Cargo.toml  README.md
veecle-osal-freertos/src/: error.rs  lib.rs  log.rs  time.rs
veecle-osal-freertos/tests/: timer_interval.rs  timer_interval_async.rs  timer_sleep.rs  timer_sleep_async.rs  timer_sleep_until.rs  timer_sleep_until_async.rs
veecle-osal-std/: Cargo.toml  README.md
veecle-osal-std-macros/: Cargo.toml  README.md
veecle-osal-std-macros/src/: lib.rs  main_impl.rs
veecle-osal-std-macros/tests/: trybuild.rs
veecle-osal-std/src/: lib.rs  log.rs  thread.rs  time.rs
veecle-osal-std/tests/: net_tcp.rs  net_udp.rs
veecle-telemetry-macros/: Cargo.toml  README.md
veecle-telemetry-macros/src/: lib.rs
(+399 files in other folders)
