[workspace]
resolver = "2"
members = [
  "capicxx-someip-sys",
  "docs/generate-markdown-index",
  "someip-test-service",
  "someip-test-service-macro",
  "someip-test-service-sys",
  "someip-test-service-tests",
  "veecle-ipc",
  "veecle-ipc-protocol",
  "veecle-orchestrator",
  "veecle-orchestrator-cli",
  "veecle-orchestrator-protocol",
  "veecle-os",
  "veecle-os-data-support-can",
  "veecle-os-data-support-can-codegen",
  "veecle-os-data-support-can-macros",
  "veecle-os-data-support-someip",
  "veecle-os-data-support-someip-macros",
  "veecle-os-runtime",
  "veecle-os-runtime-macros",
  "veecle-os-test",
  "veecle-osal-api",
  "veecle-osal-embassy",
  "veecle-osal-freertos",
  "veecle-osal-std",
  "veecle-osal-std-macros",
  "veecle-telemetry",
  "veecle-telemetry-macros",
  "veecle-telemetry-server",
  "veecle-telemetry-server-protocol",
  "veecle-telemetry-ui",
  "veecle-telemetry-vscode-extension",
  "workspace",
]
exclude = ["target"]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Veecle OS"
license = "Apache-2.0"
rust-version = "1.89.0"
repository = "https://github.com/veecle/veecle-os"
homepage = "https://veecle.io/"

[workspace.dependencies]
anyhow = { version = "1.0.99", default-features = false }
arbitrary = { version = "1.4.2", default-features = false }
bindgen = { version = "0.72.1", default-features = false }
bitflags = { version = "2.9.4", default-features = false }
camino = { version = "1.1.12", default-features = false }
can-dbc = { version = "6.0.0", default-features = false }
capicxx-someip-sys = { path = "capicxx-someip-sys", default-features = false, version = "0.1.0" }
cargo_metadata = { version = "0.22.0", default-features = false }
cc = { version = "1.2.36", default-features = false }
clap = { version = "4.5.47", default-features = false }
cmake = { version = "0.1.54", default-features = false }
colored = { version = "3.0.0", default-features = false }
comfy-table = { version = "7.2.0", default-features = false }
critical-section = { version = "1.2.0", default-features = false }
darling = { version = "0.21.3", default-features = false }
datatest-stable = { version = "0.3.2", default-features = false }
displaydoc = { version = "0.2.5", default-features = false }
eframe = { version = "0.32.2", default-features = false }
egui = { version = "0.32.2", default-features = false }
egui-notify = { version = "0.20.0", default-features = false }
egui-remixicon = { version = "0.31.1", default-features = false }
egui_extras = { version = "0.32.2", default-features = false }
embassy-executor = { version = "0.9.1", default-features = false }
embassy-net = { version = "0.7.1", default-features = false }
embassy-net-driver = { version = "0.2.0", default-features = false }
embassy-time = { version = "0.5.0", default-features = false }
embedded-hal-async = { version = "1.0.0", default-features = false }
embedded-io = { version = "0.6.1", default-features = false }
embedded-io-adapters = { version = "0.6.2", default-features = false }
embedded-io-async = { version = "0.6.1", default-features = false }
env_logger = { version = "0.11.8", default-features = false }
ewebsock = { version = "0.8.0", default-features = false }
eyre = { version = "0.6.12", default-features = false }
fs-err = { version = "3.1.1", default-features = false }
futures = { version = "0.3.31", default-features = false }
futures-test = { version = "0.3.31", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
generic-array = { version = "1.2.0", default-features = false }
heapless = { version = "0.8.0", default-features = false }
heck = { version = "0.5.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
indexmap = { version = "2.11.1", default-features = false }
indoc = { version = "2.0.6", default-features = false }
itertools = { version = "0.14.0", default-features = false }
libc = { version = "0.2.175", default-features = false }
libtest-mimic = { version = "0.8.1", default-features = false }
log = { version = "0.4.28", default-features = false }
nix = { version = "0.30.1", default-features = false }
ntest_timeout = { version = "0.9.3", default-features = false }
pin-cell = { version = "0.2.0", default-features = false }
pin-project = { version = "1.1.10", default-features = false }
poll-promise = { version = "0.3.0", default-features = false }
pretty_assertions = { version = "1.4.1", default-features = false }
prettyplease = { version = "0.2.37", default-features = false }
proc-macro-crate = { version = "3.3.0", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
rand = { version = "0.9.2", default-features = false }
re_log = { version = "0.24.1", default-features = false }
rfd = { version = "0.15.4", default-features = false }
rtt-target = { version = "0.6.1", default-features = false }
runtime-macros = { version = "1.1.1", default-features = false }
scraper = { version = "0.24.0", default-features = false }
serde = { version = "1.0.219", default-features = false }
serde_derive = { version = "1.0.219", default-features = false }
serde_ini = { version = "0.2.0", default-features = false }
serde_json = { version = "1.0.143", default-features = false }
serial_test = { version = "3.2.0", default-features = false }
signal-hook = { version = "0.3.18", default-features = false }
socket2 = { version = "0.6.0", default-features = false }
someip-test-service = { path = "someip-test-service", default-features = false, version = "0.1.0" }
someip-test-service-macro = { path = "someip-test-service-macro", default-features = false, version = "0.1.0" }
someip-test-service-sys = { path = "someip-test-service-sys", default-features = false, version = "0.1.0" }
someip-test-service-tests = { path = "someip-test-service-tests", default-features = false, version = "0.1.0" }
static_cell = { version = "2.1.1", default-features = false }
strum = { version = "0.27.2", default-features = false }
syn = { version = "2.0", default-features = false }
tempfile = { version = "3.22.0", default-features = false }
test-case = { version = "3.3.1", default-features = false }
thiserror = { version = "2.0.16", default-features = false }
tinyvec = { version = "1.10.0", default-features = false }
tokio = { version = "1.47.1", default-features = false }
tokio-stream = { version = "0.1.17", default-features = false }
tokio-tungstenite = { version = "0.27.0", default-features = false }
tokio-util = { version = "0.7.16", default-features = false }
toml = { version = "0.9.5", default-features = false }
tracing = { version = "0.1.41", default-features = false }
tracing-error = { version = "0.2.1", default-features = false }
tracing-subscriber = { version = "0.3.20", default-features = false }
trybuild = { version = "1.0.110", default-features = false }
tsify = { version = "0.5.5", default-features = false }
typenum = { version = "1.18.0", default-features = false }
unicode-ident = { version = "1.0.19", default-features = false }
uuid = { version = "1.18.1", default-features = false }
veecle-freertos-integration = { default-features = false, version = "0.1.1" }
veecle-freertos-sys = { default-features = false, version = "0.1.1" }
veecle-ipc-protocol = { path = "veecle-ipc-protocol", default-features = false, version = "0.1.0" }
veecle-orchestrator-cli = { path = "veecle-orchestrator-cli", default-features = false, version = "0.1.0" }
veecle-orchestrator-protocol = { path = "veecle-orchestrator-protocol", default-features = false, version = "0.1.0" }
veecle-os = { path = "veecle-os", default-features = false, version = "0.1.0" }
veecle-os-data-support-can = { path = "veecle-os-data-support-can", default-features = false, version = "0.1.0" }
veecle-os-data-support-can-codegen = { path = "veecle-os-data-support-can-codegen", default-features = false, version = "0.1.0" }
veecle-os-data-support-can-macros = { path = "veecle-os-data-support-can-macros", default-features = false, version = "0.1.0" }
veecle-os-data-support-someip = { path = "veecle-os-data-support-someip", default-features = false, version = "0.1.0" }
veecle-os-data-support-someip-macros = { path = "veecle-os-data-support-someip-macros", default-features = false, version = "0.1.0" }
veecle-os-runtime = { path = "veecle-os-runtime", default-features = false, version = "0.1.0" }
veecle-os-runtime-macros = { path = "veecle-os-runtime-macros", default-features = false, version = "0.1.0" }
veecle-os-test = { path = "veecle-os-test", default-features = false, version = "0.1.0" }
veecle-osal-api = { path = "veecle-osal-api", default-features = false, version = "0.1.0" }
veecle-osal-embassy = { path = "veecle-osal-embassy", default-features = false, version = "0.1.0" }
veecle-osal-freertos = { path = "veecle-osal-freertos", default-features = false, version = "0.1.0" }
veecle-osal-std = { path = "veecle-osal-std", default-features = false, version = "0.1.0" }
veecle-osal-std-macros = { path = "veecle-osal-std-macros", default-features = false, version = "0.1.0" }
veecle-telemetry = { path = "veecle-telemetry", default-features = false, version = "0.1.0" }
veecle-telemetry-macros = { path = "veecle-telemetry-macros", default-features = false, version = "0.1.0" }
veecle-telemetry-server = { path = "veecle-telemetry-server", default-features = false, version = "0.1.0" }
veecle-telemetry-server-protocol = { path = "veecle-telemetry-server-protocol", default-features = false, version = "0.1.0" }
veecle-telemetry-ui = { path = "veecle-telemetry-ui", default-features = false, version = "0.1.0" }
wakerset = { version = "0.2.5", default-features = false }
walkdir = { version = "2.5.0", default-features = false }
wasm-bindgen = { version = "0.2.101", default-features = false }
wasm-bindgen-futures = { version = "0.4", default-features = false }
web-sys = { version = "0.3.78", default-features = false }
web-time = { version = "1.1.0", default-features = false }

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
unsafe_op_in_unsafe_fn = "deny"
unsafe_attr_outside_unsafe = "deny"

[workspace.lints.clippy]
module_inception = "allow"          # bad lint https://github.com/rust-lang/rust-clippy/issues/13259
undocumented_unsafe_blocks = "warn"
alloc_instead_of_core = "warn"

[workspace.metadata.workspaces]
allow_branch = "release-*"
