[workspace]
resolver = "3"
members = [
  "capicxx-someip-sys",
  "docs/generate-markdown-index",
  "someip-test-service",
  "someip-test-service-macro",
  "someip-test-service-sys",
  "someip-test-service-tests",
  "veecle-ipc",
  "veecle-ipc-protocol",
  "veecle-net-utils",
  "veecle-orchestrator",
  "veecle-orchestrator-cli",
  "veecle-orchestrator-protocol",
  "veecle-os",
  "veecle-os-data-support-can",
  "veecle-os-data-support-can-codegen",
  "veecle-os-data-support-can-macros",
  "veecle-os-data-support-someip",
  "veecle-os-data-support-someip-macros",
  "veecle-os-runtime",
  "veecle-os-runtime-macros",
  "veecle-os-test",
  "veecle-osal-api",
  "veecle-osal-embassy",
  "veecle-osal-freertos",
  "veecle-osal-std",
  "veecle-osal-std-macros",
  "veecle-telemetry",
  "veecle-telemetry-macros",
  "veecle-telemetry-server",
  "veecle-telemetry-server-protocol",
  "veecle-telemetry-ui",
  "workspace",
]
exclude = ["target"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Veecle OS"
homepage = "https://veecle.io/"
repository = "https://github.com/veecle/veecle-os"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = { version = "1.0.99", default-features = false }
arbitrary = { version = "1.4.2", default-features = false }
bindgen = { version = "0.72.1", default-features = false }
bitflags = { version = "2.9.4", default-features = false }
camino = { version = "1.1.12", default-features = false }
can-dbc = { version = "6.0.0", default-features = false }
capicxx-someip-sys = { path = "capicxx-someip-sys", version = "0.1.0", default-features = false }
cargo_metadata = { version = "0.22.0", default-features = false }
cc = { version = "1.2.36", default-features = false }
clap = { version = "4.5.47", default-features = false }
cmake = { version = "0.1.54", default-features = false }
colored = { version = "3.0.0", default-features = false }
comfy-table = { version = "7.2.0", default-features = false }
critical-section = { version = "1.2.0", default-features = false }
darling = { version = "0.21.3", default-features = false }
datatest-stable = { version = "0.3.2", default-features = false }
displaydoc = { version = "0.2.5", default-features = false }
eframe = { version = "0.32.2", default-features = false }
egui = { version = "0.32.2", default-features = false }
egui_extras = { version = "0.32.2", default-features = false }
egui-notify = { version = "0.20.0", default-features = false }
egui-remixicon = { version = "0.31.1", default-features = false }
embassy-executor = { version = "0.9.1", default-features = false }
embassy-net = { version = "0.7.1", default-features = false }
embassy-net-driver = { version = "0.2.0", default-features = false }
embassy-time = { version = "0.5.0", default-features = false }
embedded-hal-async = { version = "1.0.0", default-features = false }
embedded-io = { version = "0.6.1", default-features = false }
embedded-io-adapters = { version = "0.6.2", default-features = false }
embedded-io-async = { version = "0.6.1", default-features = false }
env_logger = { version = "0.11.8", default-features = false }
ewebsock = { version = "0.8.0", default-features = false }
eyre = { version = "0.6.12", default-features = false }
fs-err = { version = "3.1.1", default-features = false }
futures = { version = "0.3.31", default-features = false }
futures-test = { version = "0.3.31", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
generic-array = { version = "1.3.3", default-features = false }
heapless = { version = "0.8.0", default-features = false }
heck = { version = "0.5.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
indexmap = { version = "2.11.1", default-features = false }
indoc = { version = "2.0.6", default-features = false }
itertools = { version = "0.14.0", default-features = false }
libc = { version = "0.2.177", default-features = false }
libtest-mimic = { version = "0.8.1", default-features = false }
log = { version = "0.4.28", default-features = false }
nix = { version = "0.30.1", default-features = false }
ntest_timeout = { version = "0.9.3", default-features = false }
pin-cell = { version = "0.2.0", default-features = false }
pin-project = { version = "1.1.10", default-features = false }
poll-promise = { version = "0.3.0", default-features = false }
pretty_assertions = { version = "1.4.1", default-features = false }
prettyplease = { version = "0.2.37", default-features = false }
proc-macro-crate = { version = "3.4.0", default-features = false }
proc-macro2 = { version = "1.0.101", default-features = false }
quote = { version = "1.0.41", default-features = false }
rand = { version = "0.9.2", default-features = false }
re_log = { version = "0.24.1", default-features = false }
rfd = { version = "0.15.4", default-features = false }
rtt-target = { version = "0.6.1", default-features = false }
runtime-macros = { version = "1.1.1", default-features = false }
scraper = { version = "0.24.0", default-features = false }
serde = { version = "1.0.219", default-features = false }
serde_derive = { version = "1.0.219", default-features = false }
serde_ini = { version = "0.2.0", default-features = false }
serde_json = { version = "1.0.145", default-features = false }
serial_test = { version = "3.2.0", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
signal-hook = { version = "0.3.18", default-features = false }
socket2 = { version = "0.6.1", default-features = false }
someip-test-service = { path = "someip-test-service", version = "0.1.0", default-features = false }
someip-test-service-macro = { path = "someip-test-service-macro", version = "0.1.0", default-features = false }
someip-test-service-sys = { path = "someip-test-service-sys", version = "0.1.0", default-features = false }
someip-test-service-tests = { path = "someip-test-service-tests", version = "0.1.0", default-features = false }
static_cell = { version = "2.1.1", default-features = false }
strum = { version = "0.27.2", default-features = false }
syn = { version = "2.0.106", default-features = false }
tempfile = { version = "3.22.0", default-features = false }
test-case = { version = "3.3.1", default-features = false }
thiserror = { version = "2.0.16", default-features = false }
tinyvec = { version = "1.10.0", default-features = false }
tokio = { version = "1.47.1", default-features = false }
tokio-stream = { version = "0.1.17", default-features = false }
tokio-tungstenite = { version = "0.27.0", default-features = false }
tokio-util = { version = "0.7.16", default-features = false }
toml = { version = "0.9.5", default-features = false }
tracing = { version = "0.1.41", default-features = false }
tracing-error = { version = "0.2.1", default-features = false }
tracing-subscriber = { version = "0.3.20", default-features = false }
trybuild = { version = "1.0.110", default-features = false }
typenum = { version = "1.19.0", default-features = false }
unicode-ident = { version = "1.0.19", default-features = false }
uuid = { version = "1.18.1", default-features = false }
veecle-freertos-integration = { version = "0.1.1", default-features = false }
veecle-freertos-sys = { version = "0.1.1", default-features = false }
veecle-ipc-protocol = { path = "veecle-ipc-protocol", version = "0.1.0", default-features = false }
veecle-orchestrator-cli = { path = "veecle-orchestrator-cli", version = "0.1.0", default-features = false }
veecle-orchestrator-protocol = { path = "veecle-orchestrator-protocol", version = "0.1.0", default-features = false }
veecle-os = { path = "veecle-os", version = "0.1.0", default-features = false }
veecle-os-data-support-can = { path = "veecle-os-data-support-can", version = "0.1.0", default-features = false }
veecle-os-data-support-can-codegen = { path = "veecle-os-data-support-can-codegen", version = "0.1.0", default-features = false }
veecle-os-data-support-can-macros = { path = "veecle-os-data-support-can-macros", version = "0.1.0", default-features = false }
veecle-os-data-support-someip = { path = "veecle-os-data-support-someip", version = "0.1.0", default-features = false }
veecle-os-data-support-someip-macros = { path = "veecle-os-data-support-someip-macros", version = "0.1.0", default-features = false }
veecle-os-runtime = { path = "veecle-os-runtime", version = "0.1.0", default-features = false }
veecle-os-runtime-macros = { path = "veecle-os-runtime-macros", version = "0.1.0", default-features = false }
veecle-os-test = { path = "veecle-os-test", version = "0.1.0", default-features = false }
veecle-osal-api = { path = "veecle-osal-api", version = "0.1.0", default-features = false }
veecle-osal-embassy = { path = "veecle-osal-embassy", version = "0.1.0", default-features = false }
veecle-osal-freertos = { path = "veecle-osal-freertos", version = "0.1.0", default-features = false }
veecle-osal-std = { path = "veecle-osal-std", version = "0.1.0", default-features = false }
veecle-osal-std-macros = { path = "veecle-osal-std-macros", version = "0.1.0", default-features = false }
veecle-telemetry = { path = "veecle-telemetry", version = "0.1.0", default-features = false }
veecle-telemetry-macros = { path = "veecle-telemetry-macros", version = "0.1.0", default-features = false }
veecle-telemetry-server = { path = "veecle-telemetry-server", version = "0.1.0", default-features = false }
veecle-telemetry-server-protocol = { path = "veecle-telemetry-server-protocol", version = "0.1.0", default-features = false }
veecle-telemetry-ui = { path = "veecle-telemetry-ui", version = "0.1.0", default-features = false }
wakerset = { version = "0.2.5", default-features = false }
walkdir = { version = "2.5.0", default-features = false }
wasm-bindgen = { version = "0.2.101", default-features = false }
wasm-bindgen-futures = { version = "0.4.51", default-features = false }
web-sys = { version = "0.3.78", default-features = false }
web-time = { version = "1.1.0", default-features = false }

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
module_inception = "allow"  # bad lint https://github.com/rust-lang/rust-clippy/issues/13259
undocumented_unsafe_blocks = "warn"

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  "cfg(coverage,coverage_nightly)",
] }
unsafe_attr_outside_unsafe = "deny"
unsafe_op_in_unsafe_fn = "deny"

[workspace.metadata.workspaces]
allow_branch = "release-*"
