[package]
name = "readme-example"
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
# Must be kept in sync with the root README.md.
tokio = "1.49.0"
# TODO(#161): Use released version when `ConsolePrettyExporter` is released.
veecle-os = { path = "../veecle-os", features = [
  "osal-std",
  "telemetry-enable",
] }

[lints]
workspace = true
