[package]
name = "someip-test-service-macro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Helps setup SOME/IP integration test"
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[package.metadata]
# Miri cannot test proc-macros.
workspace-checks.miri = false

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
ntest_timeout = { workspace = true }
someip-test-service = { workspace = true }

[lints]
workspace = true
