[package]
name = "someip-test-service-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "SOME/IP test service and unsafe Rust bindings to it"
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[package.metadata]
# The tests involve FFI which miri cannot execute.
workspace-checks.miri = false

[dependencies]
capicxx-someip-sys = { workspace = true }

[dev-dependencies]
ntest_timeout = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
tempfile = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
bindgen = { workspace = true, features = ["runtime"] }
cmake = { workspace = true }

[lints]
workspace = true
