[package]
name = "someip-test-service-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Tests against external SOME/IP service"
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[package.metadata]
# Miri is having issues with the tempfile crate
# because it uses "open", which is unsupported.
workspace-checks.miri = false

[dev-dependencies]
ntest_timeout = { workspace = true }
pretty_assertions = { workspace = true, features = ["std"] }
someip-test-service = { workspace = true }
someip-test-service-macro = { workspace = true }
veecle-os-data-support-someip = { workspace = true }

[lints]
workspace = true
