[package]
name = "someip-test-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "SOME/IP test service"
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[package.metadata]
# miri is having issues with the tempfile crate
# because it uses "open", which is unsupported.
workspace-checks.miri = false

[dependencies]
anyhow = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
serde = { workspace = true, features = ["derive"] }
serde_ini = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
signal-hook = { workspace = true }
someip-test-service-sys = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tempfile = { workspace = true }

[dev-dependencies]
ntest_timeout = { workspace = true }

[lints]
workspace = true
