[package]
name = "veecle-ipc-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Defines the shared protocol used to communicate between runtime instances and the `veecle-orchestrator`"
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[package.metadata]
# This crate uses `#![forbid(unsafe_code)]`.
workspace-checks.miri = false

[dependencies]
displaydoc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true, features = ["std"] }
tokio-util = { workspace = true, features = ["codec"] }
uuid = { workspace = true, features = ["serde"] }
veecle-os-runtime = { workspace = true }
veecle-telemetry = { workspace = true, features = ["std"] }

[lints]
workspace = true
