[package]
name = "veecle-ipc-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Defines the shared protocol used to communicate between runtime instances and the `veecle-orchestrator`"
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[package.metadata]
# This crate uses `#![forbid(unsafe_code)]`.
workspace-checks.miri = false

[dependencies]
displaydoc = { workspace = true }
heapless = { workspace = true, optional = true }
iceoryx2 = { version = "0.7.0", default-features = false, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, features = ["std"], optional = true }
thiserror = { workspace = true, features = ["std"] }
tokio-util = { workspace = true, features = ["codec"], optional = true }
uuid = { workspace = true, features = ["serde"] }
veecle-os-runtime = { workspace = true }
veecle-telemetry = { workspace = true, features = ["std"] }

[features]
iceoryx2 = ["dep:heapless", "dep:iceoryx2"]
jsonl = ["dep:serde", "dep:serde_json", "dep:tokio-util"]

[lints]
workspace = true
