[package]
name = "veecle-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Supports inter-runtime-communication when running multiple runtime instances under the `veecle-orchestrator`"
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[package.metadata]
# This crate uses `#![forbid(unsafe_code)]`.
workspace-checks.miri = false

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
iceoryx2 = { version = "0.7.0", default-features = false, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, features = ["std"], optional = true }
tokio = { workspace = true, features = ["macros", "net", "rt", "sync"] }
tokio-util = { workspace = true, features = ["codec"], optional = true }
veecle-ipc-protocol = { workspace = true }
veecle-os-runtime = { workspace = true }
veecle-osal-std = { workspace = true }
veecle-telemetry = { workspace = true, features = ["alloc"] }

[dev-dependencies]
rand = { workspace = true, features = ["std_rng"] }
serde = { workspace = true, features = ["derive"] }
# Requires the `jsonl` feature for documentation examples.
veecle-ipc = { workspace = true, features = ["jsonl"] }
# Telemetry is used in documentation examples.
veecle-os = { workspace = true, features = ["telemetry-enable"] }
veecle-telemetry = { workspace = true, features = ["alloc", "enable"] }

[features]
iceoryx2 = [
  "dep:iceoryx2",
  "dep:serde",
  "dep:serde_json",
  "veecle-ipc-protocol/iceoryx2",
]
jsonl = [
  "dep:serde",
  "dep:serde_json",
  "dep:tokio-util",
  "veecle-ipc-protocol/jsonl",
]

[lints]
workspace = true
