[package]
name = "veecle-orchestrator-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Data definitions to communicate with a Veecle OS Orchestrator"
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[package.metadata]
# This crate uses `#![forbid(unsafe_code)]`.
workspace-checks.miri = false

[dependencies]
camino = { workspace = true, features = ["serde1"] }
serde = { workspace = true, features = ["derive", "std"] }
uuid = { workspace = true, features = ["serde", "std", "v7"] }

[lints]
workspace = true
